# transfer-learning-Libtorch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  cmake.bat  transfer-learning.sln  transfer-learning.vcxproj  transfer-learning.vcxproj.filters
.github/workflows/: CI.yml  push.yml
Model/: convert.py  modelsimpl.h  resnet.cpp  resnet.h
Sample/test/: test_map.txt
Sample/train/: train_map.txt
Scripts/ps/: _info.ps1  _operations.ps1  install.ps1
include/: ImageNetDataSet.h
include/model/: resnet.h
src/: ImageNetDataSet.cpp  transfer-learning.cpp  transfer-learning.vcxproj  transfer-learning.vcxproj.filters
src/model/: resnet.cpp
transfer-learning/: ImageNetDataSet.cpp  ImageNetDataSet.h  transfer-learning.cpp  transfer-learning.vcxproj  transfer-learning.vcxproj.filters
